--- a/modular-kitchen.html
+++ b/modular-kitchen.html
@@ -198,7 +198,7 @@
             <div class="row g-5">
                 <div class="col-md-4 ftco-animate mb-3">
 
-                    <div class="menu-item2 text-center">
+                    <div class="menu-item2 text-center wow fadeInLeft">
                         <img src="img/Mr.-Sudheer-3d-Presentation.jpg/3a57be0fff784be1fba97f8e6a5e6914C2VM8l26gZacJMLe-32.jpg" class="size_img2" />
 
 
@@ -207,7 +207,7 @@
 
                 <div class="col-md-4 ftco-animate mb-3">
 
-                    <div class="menu-item2 text-center">
+                    <div class="menu-item2 text-center wow fadeInLeft">
                         <img src="img/Mr.-Sudheer-3d-Presentation.jpg/3a57be0fff784be1fba97f8e6a5e6914C2VM8l26gZacJMLe-31.jpg" class="size_img2" />
 
 
@@ -215,7 +215,7 @@
                 </div>
                 <div class="col-md-4 ftco-animate mb-3">
 
-                    <div class="menu-item2 text-center">
+                    <div class="menu-item2 text-center wow fadeInLeft">
                         <img src="img/Mr.-Sudheer-3d-Presentation.jpg/3a57be0fff784be1fba97f8e6a5e6914C2VM8l26gZacJMLe-29.jpg" class="size_img2" />
 
 
@@ -223,7 +223,7 @@
                 </div>
                 <div class="col-md-4 ftco-animate mb-3">
 
-                    <div class="menu-item2 text-center">
+                    <div class="menu-item2 text-center wow fadeInRight">
                         <img src="img/Mr-Nishanth_final-designs-PPT.jpg (1)/27e0c256b6e048e78f4d1f327484bba9BAcRR4CKKUIsmeTM-17.jpg" class="size_img2" />
 
 
@@ -231,7 +231,7 @@
                 </div>
                 <div class="col-md-4 ftco-animate mb-3">
 
-                    <div class="menu-item2 text-center">
+                    <div class="menu-item2 text-center wow fadeInRight">
                         <img src="img/Mr-Nishanth_final-designs-PPT.jpg (1)/27e0c256b6e048e78f4d1f327484bba9BAcRR4CKKUIsmeTM-15.jpg" class="size_img2" />
 
 
@@ -239,7 +239,7 @@
                 </div>
                 <div class="col-md-4 ftco-animate mb-3">
 
-                    <div class="menu-item2 text-center">
+                    <div class="menu-item2 text-center wow fadeInRight">
                         <img src="img/Mr-Nishanth_final-designs-PPT.jpg (1)/27e0c256b6e048e78f4d1f327484bba9BAcRR4CKKUIsmeTM-14.jpg" class="size_img2" />
 
 
