--- a/space-saving-furniture.html
+++ b/space-saving-furniture.html
@@ -193,7 +193,7 @@
             <div class="row g-5">
                 <div class="col-md-4 ftco-animate mb-3">
 
-                    <div class="menu-item2 text-center">
+                    <div class="menu-item2 text-center wow fadeInLeft">
                         <img src="img/ss8.webp" class="size_img2" />
 
 
@@ -202,7 +202,7 @@
 
                 <div class="col-md-4 ftco-animate mb-3">
 
-                    <div class="menu-item2 text-center">
+                    <div class="menu-item2 text-center wow fadeInLeft">
                         <img src="img/ss1.png" class="size_img2" />
 
 
@@ -210,7 +210,7 @@
                 </div>
                 <div class="col-md-4 ftco-animate mb-3">
 
-                    <div class="menu-item2 text-center">
+                    <div class="menu-item2 text-center wow fadeInLeft">
                         <img src="img/ss2.png" class="size_img2" />
 
 
@@ -218,7 +218,7 @@
                 </div>
                 <div class="col-md-4 ftco-animate mb-3">
 
-                    <div class="menu-item2 text-center">
+                    <div class="menu-item2 text-center wow fadeInRight">
                         <img src="img/ss3.jpg" class="size_img2" />
 
 
@@ -226,7 +226,7 @@
                 </div>
                 <div class="col-md-4 ftco-animate mb-3">
 
-                    <div class="menu-item2 text-center">
+                    <div class="menu-item2 text-center wow fadeInRight">
                         <img src="img/ss4.png" class="size_img2" />
 
 
@@ -234,7 +234,7 @@
                 </div>
                 <div class="col-md-4 ftco-animate mb-3">
 
-                    <div class="menu-item2 text-center">
+                    <div class="menu-item2 text-center wow fadeInRight">
                         <img src="img/ss6.png" class="size_img2" />
 
 
@@ -242,7 +242,7 @@
                 </div>
                 <div class="col-md-4 ftco-animate mb-3">
 
-                    <div class="menu-item2 text-center">
+                    <div class="menu-item2 text-center wow fadeInDown">
                         <img src="img/ss5.jpg" class="size_img2" />
 
 
@@ -250,7 +250,7 @@
                 </div>
                 <div class="col-md-4 ftco-animate mb-3">
 
-                    <div class="menu-item2 text-center">
+                    <div class="menu-item2 text-center wow fadeInDown">
                         <img src="img/ss7.webp" class="size_img2" />
 
 
@@ -258,7 +258,7 @@
                 </div>
                 <div class="col-md-4 ftco-animate mb-3">
 
-                    <div class="menu-item2 text-center">
+                    <div class="menu-item2 text-center wow fadeInDown">
                         <img src="img/ss9.webp" class="size_img2" />
 
 
@@ -266,13 +266,13 @@
                 </div>
                 <div class="col-md-4 ftco-animate mb-3">
 
-                    <div class="menu-item2 text-center">
+                    <div class="menu-item2 text-center wow fadeInUp">
                         <img src="img/ss10.webp" class="size_img2" />
 
 
                     </div>
                 </div>
-                <div class="col-md-4 ftco-animate mb-3">
+                <div class="col-md-4 ftco-animate mb-3 wow fadeInUp">
 
                     <div class="menu-item2 text-center">
                         <img src="img/furniture-desk.webp" class="size_img2" />
