--- a/modular-kitchen.html
+++ b/modular-kitchen.html
@@ -29,9 +29,12 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
+    <link rel="stylesheet" href="path/to/lightbox2.css">
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -199,8 +202,9 @@
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center wow fadeInLeft">
+                        <a loading="eager" href="img/Mr.-Sudheer-3d-Presentation.jpg/3a57be0fff784be1fba97f8e6a5e6914C2VM8l26gZacJMLe-32.jpg" data-lightbox="image-set" data-title="KITCHEN">
                         <img src="img/Mr.-Sudheer-3d-Presentation.jpg/3a57be0fff784be1fba97f8e6a5e6914C2VM8l26gZacJMLe-32.jpg" class="size_img2" />
-
+                       </a>
 
                     </div>
                 </div>
@@ -208,40 +212,45 @@
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center wow fadeInLeft">
+                        <a loading="eager" href="img/Mr.-Sudheer-3d-Presentation.jpg/3a57be0fff784be1fba97f8e6a5e6914C2VM8l26gZacJMLe-31.jpg" data-lightbox="image-set" data-title="KITCHEN">
                         <img src="img/Mr.-Sudheer-3d-Presentation.jpg/3a57be0fff784be1fba97f8e6a5e6914C2VM8l26gZacJMLe-31.jpg" class="size_img2" />
-
+                    </a>
 
                     </div>
                 </div>
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center wow fadeInLeft">
+                        <a loading="eager" href="img/Mr.-Sudheer-3d-Presentation.jpg/3a57be0fff784be1fba97f8e6a5e6914C2VM8l26gZacJMLe-29.jpg" data-lightbox="image-set" data-title="KITCHEN">
                         <img src="img/Mr.-Sudheer-3d-Presentation.jpg/3a57be0fff784be1fba97f8e6a5e6914C2VM8l26gZacJMLe-29.jpg" class="size_img2" />
 
-
+                    </a>
                     </div>
                 </div>
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center wow fadeInRight">
+                        <a loading="eager" href="img/Mr-Nishanth_final-designs-PPT.jpg (1)/27e0c256b6e048e78f4d1f327484bba9BAcRR4CKKUIsmeTM-17.jpg" data-lightbox="image-set" data-title="KITCHEN">
                         <img src="img/Mr-Nishanth_final-designs-PPT.jpg (1)/27e0c256b6e048e78f4d1f327484bba9BAcRR4CKKUIsmeTM-17.jpg" class="size_img2" />
-
+                    </a>
 
                     </div>
                 </div>
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center wow fadeInRight">
+                        <a loading="eager" href="img/Mr-Nishanth_final-designs-PPT.jpg (1)/27e0c256b6e048e78f4d1f327484bba9BAcRR4CKKUIsmeTM-15.jpg" data-lightbox="image-set" data-title="KITCHEN">
                         <img src="img/Mr-Nishanth_final-designs-PPT.jpg (1)/27e0c256b6e048e78f4d1f327484bba9BAcRR4CKKUIsmeTM-15.jpg" class="size_img2" />
-
+                    </a>
 
                     </div>
                 </div>
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center wow fadeInRight">
+                        <a loading="eager" href="img/Mr-Nishanth_final-designs-PPT.jpg (1)/27e0c256b6e048e78f4d1f327484bba9BAcRR4CKKUIsmeTM-14.jpg" data-lightbox="image-set" data-title="KITCHEN">
                         <img src="img/Mr-Nishanth_final-designs-PPT.jpg (1)/27e0c256b6e048e78f4d1f327484bba9BAcRR4CKKUIsmeTM-14.jpg" class="size_img2" />
-
+                    </a>
 
                     </div>
                 </div>
@@ -346,6 +355,10 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+    <!-- Template Javascript -->
+    <script src="js/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+    <script src="path/to/lightbox2.js"></script>
 </body>
 
 </html>
