--- a/space-saving-furniture.html
+++ b/space-saving-furniture.html
@@ -27,9 +27,12 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
+    <link rel="stylesheet" href="path/to/lightbox2.css">
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -194,8 +197,9 @@
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center wow fadeInLeft">
+                        <a loading="eager" href="img/ss8.webp" data-lightbox="image-set" >
                         <img src="img/ss8.webp" class="size_img2" />
-
+                    </a>
 
                     </div>
                 </div>
@@ -203,80 +207,90 @@
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center wow fadeInLeft">
+                        <a loading="eager" href="img/ss1.png" data-lightbox="image-set" >
                         <img src="img/ss1.png" class="size_img2" />
-
+                    </a>
 
                     </div>
                 </div>
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center wow fadeInLeft">
+                        <a loading="eager" href="img/ss2.png" data-lightbox="image-set" >
                         <img src="img/ss2.png" class="size_img2" />
 
-
+                    </a>
                     </div>
                 </div>
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center wow fadeInRight">
+                        <a loading="eager" href="img/ss3.jpg" data-lightbox="image-set" >
                         <img src="img/ss3.jpg" class="size_img2" />
-
+                    </a>
 
                     </div>
                 </div>
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center wow fadeInRight">
+                        <a loading="eager" href="img/ss4.png" data-lightbox="image-set" >
                         <img src="img/ss4.png" class="size_img2" />
-
+                    </a>
 
                     </div>
                 </div>
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center wow fadeInRight">
+                        <a loading="eager" href="img/ss6.png" data-lightbox="image-set" >
                         <img src="img/ss6.png" class="size_img2" />
-
+                    </a>
 
                     </div>
                 </div>
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center wow fadeInDown">
+                        <a loading="eager" href="img/ss5.jpg" data-lightbox="image-set" >
                         <img src="img/ss5.jpg" class="size_img2" />
-
+                    </a>
 
                     </div>
                 </div>
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center wow fadeInDown">
+                        <a loading="eager" href="img/ss7.webp" data-lightbox="image-set" >
                         <img src="img/ss7.webp" class="size_img2" />
-
+                    </a>
 
                     </div>
                 </div>
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center wow fadeInDown">
+                        <a loading="eager" href="img/ss9.webp" data-lightbox="image-set" >
                         <img src="img/ss9.webp" class="size_img2" />
-
+                    </a>
 
                     </div>
                 </div>
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center wow fadeInUp">
+                        <a loading="eager" href="img/ss10.webp" data-lightbox="image-set" >
                         <img src="img/ss10.webp" class="size_img2" />
-
+                    </a>
 
                     </div>
                 </div>
                 <div class="col-md-4 ftco-animate mb-3 wow fadeInUp">
 
                     <div class="menu-item2 text-center">
+                        <a loading="eager" href="img/furniture-desk.webp" data-lightbox="image-set" >
                         <img src="img/furniture-desk.webp" class="size_img2" />
-
+                    </a>
 
                     </div>
                 </div>
@@ -380,8 +394,11 @@
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
+    
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+    <script src="path/to/lightbox2.js"></script>
 </body>
 
 </html>
