--- a/wardrobe.html
+++ b/wardrobe.html
@@ -38,9 +38,12 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
+    <link rel="stylesheet" href="path/to/lightbox2.css">
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet" />
+    <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
   </head>
 
   <body>
@@ -276,63 +279,87 @@
         <div class="row g-5">
           <div class="col-md-4 ftco-animate mb-3">
             <div class="menu-item2 text-center wow fadeInLeft">
+              <a loading="eager" href="img/Mr.-Sudheer-3d-Presentation.jpg/3a57be0fff784be1fba97f8e6a5e6914C2VM8l26gZacJMLe-28.jpg" data-lightbox="image-set" data-title="GUEST BEDROOM INTERNALS">
               <img src="img/Mr.-Sudheer-3d-Presentation.jpg/3a57be0fff784be1fba97f8e6a5e6914C2VM8l26gZacJMLe-28.jpg" class="size_img2" />
+            </a>
             </div>
           </div>
 
           <div class="col-md-4 ftco-animate mb-3">
             <div class="menu-item2 text-center wow fadeInLeft">
+              <a loading="eager" href="img/Mr.-Sudheer-3d-Presentation.jpg/3a57be0fff784be1fba97f8e6a5e6914C2VM8l26gZacJMLe-27.jpg" data-lightbox="image-set" data-title="GUEST BEDROOM INTERNALS">
               <img src="img/Mr.-Sudheer-3d-Presentation.jpg/3a57be0fff784be1fba97f8e6a5e6914C2VM8l26gZacJMLe-27.jpg" class="size_img2" />
+            </a>
             </div>
           </div>
           <div class="col-md-4 ftco-animate mb-3">
             <div class="menu-item2 text-center wow fadeInLeft">
+              <a loading="eager" href="img/Mr.-Sudheer-3d-Presentation.jpg/3a57be0fff784be1fba97f8e6a5e6914C2VM8l26gZacJMLe-24.jpg" data-lightbox="image-set" data-title="KIDS BEDROOM INTERNALS">
               <img src="img/Mr.-Sudheer-3d-Presentation.jpg/3a57be0fff784be1fba97f8e6a5e6914C2VM8l26gZacJMLe-24.jpg" class="size_img2" />
+            </a>
             </div>
           </div>
           <div class="col-md-4 ftco-animate mb-3">
             <div class="menu-item2 text-center wow fadeInRight">
+              <a loading="eager" href="img/Mr.-Sudheer-3d-Presentation.jpg/3a57be0fff784be1fba97f8e6a5e6914C2VM8l26gZacJMLe-19.jpg" data-lightbox="image-set" data-title="MASTER BEDROOM INTERNALS">
               <img src="img/Mr.-Sudheer-3d-Presentation.jpg/3a57be0fff784be1fba97f8e6a5e6914C2VM8l26gZacJMLe-19.jpg" class="size_img2" />
+            </a>
             </div>
           </div>
           <div class="col-md-4 ftco-animate mb-3">
             <div class="menu-item2 text-center wow fadeInRight">
+              <a loading="eager" href="img/Mr-Nishanth_final-designs-PPT.jpg (1)/27e0c256b6e048e78f4d1f327484bba9BAcRR4CKKUIsmeTM-25.jpg" data-lightbox="image-set" data-title="GUEST BEDROOM INTERNALS">
               <img src="img/Mr-Nishanth_final-designs-PPT.jpg (1)/27e0c256b6e048e78f4d1f327484bba9BAcRR4CKKUIsmeTM-25.jpg" class="size_img2" />
+            </a>
             </div>
           </div>
           <div class="col-md-4 ftco-animate mb-3">
             <div class="menu-item2 text-center wow fadeInRight">
+              <a loading="eager" href="img/Mr-Nishanth_final-designs-PPT.jpg (1)/27e0c256b6e048e78f4d1f327484bba9BAcRR4CKKUIsmeTM-30.jpg" data-lightbox="image-set" data-title="KIDS BEDROOM INTERNALS">
               <img src="img/Mr-Nishanth_final-designs-PPT.jpg (1)/27e0c256b6e048e78f4d1f327484bba9BAcRR4CKKUIsmeTM-30.jpg" class="size_img2" />
+            </a>
             </div>
           </div>
           <div class="col-md-4 ftco-animate mb-3">
             <div class="menu-item2 text-center wow fadeInDown">
+              <a loading="eager" href="img/Mr-Abhinav-Sharma_Final-designs-PPT.jpg/a40c7f8653204f8de4b520878946cd8e3vlo19Z7B7jqV3wP-14.jpg" data-lightbox="image-set" data-title="MASTER BEDROOM INTERNALS">
               <img src="img/Mr-Abhinav-Sharma_Final-designs-PPT.jpg/a40c7f8653204f8de4b520878946cd8e3vlo19Z7B7jqV3wP-14.jpg" class="size_img2" />
+            </a>
             </div>
           </div>
           <div class="col-md-4 ftco-animate mb-3">
             <div class="menu-item2 text-center wow fadeInDown">
+              <a loading="eager" href="img/Mr-Abhinav-Sharma_Final-designs-PPT.jpg/a40c7f8653204f8de4b520878946cd8e3vlo19Z7B7jqV3wP-21.jpg" data-lightbox="image-set" data-title="MASTER BEDROOM INTERNALS">
               <img src="img/Mr-Abhinav-Sharma_Final-designs-PPT.jpg/a40c7f8653204f8de4b520878946cd8e3vlo19Z7B7jqV3wP-21.jpg" class="size_img2" />
+            </a>/
             </div>
           </div>
           <div class="col-md-4 ftco-animate mb-3">
             <div class="menu-item2 text-center wow fadeInDown">
+              <a loading="eager" href="img/Mr-Abhinav-Sharma_Final-designs-PPT.jpg/a40c7f8653204f8de4b520878946cd8e3vlo19Z7B7jqV3wP-27.jpg" data-lightbox="image-set" data-title="UTILITY INTERNALS">
               <img src="img/Mr-Abhinav-Sharma_Final-designs-PPT.jpg/a40c7f8653204f8de4b520878946cd8e3vlo19Z7B7jqV3wP-27.jpg" class="size_img2" />
+            </a>
             </div>
           </div>
           <div class="col-md-4 ftco-animate mb-3">
             <div class="menu-item2 text-center wow fadeInUp">
+              <a loading="eager" href="img/AnyConv.com__IMG_6729.jpg" data-lightbox="image-set" >
               <img src="img/AnyConv.com__IMG_6729.jpg" class="size_img2" />
+            </a>
             </div>
           </div>
           <div class="col-md-4 ftco-animate mb-3">
             <div class="menu-item2 text-center wow fadeInUp">
+              <a loading="eager" href="img/AnyConv.com__IMG_6730.jpg" data-lightbox="image-set" >
               <img src="img/AnyConv.com__IMG_6730.jpg" class="size_img2" />
+            </a>
             </div>
           </div>
           <div class="col-md-4 ftco-animate mb-3">
             <div class="menu-item2 text-center wow fadeInUp">
+              <a loading="eager" href="img/AnyConv.com__IMG_6747.jpg" data-lightbox="image-set" >
               <img src="img/AnyConv.com__IMG_6747.jpg" class="size_img2" />
+            </a>
             </div>
           </div>
         </div>
@@ -459,5 +486,9 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+    <!-- Template Javascript -->
+    <script src="js/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+    <script src="path/to/lightbox2.js"></script>
   </body>
 </html>
