--- a/index.html
+++ b/index.html
@@ -715,60 +715,60 @@
             </span>
             <div class="row">
                 <div class="col-lg-2 col-md-6 col-sm-6 col-6">
-                    <img src="img/kitchen-1.png" alt="Modular Kitchen">
+                    <img src="img/new/k1.png" alt="Modular Kitchen">
                     <p>Modular Kitchen</p>
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-6 col-6 ">
-                    <img src="img/wordrobe.png" alt="Storage & Wardrobes">
+                    <img src="img/new/k2.png" alt="Storage & Wardrobes">
                     <p>Wardrobes</p>
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-6 col-6 ">
-                    <img src="img/poojaunit-1.png" alt="Puja Unit">
+                    <img src="img/new/k3.png" alt="Puja Unit">
                     <p>Puja Unit</p>
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-6 col-6 ">
-                    <img src="img/crockeryunit-1.png" alt="Crockery Units">
+                    <img src="img/new/k4.png" alt="Crockery Units">
                     <p>Crockery Units</p>
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-6 col-6 ">
-                    <img src="img/tvunit-1.png" alt="TV Units">
+                    <img src="img/new/k5.png" alt="TV Units">
                     <p>TV Units</p>
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-6 col-6 ">
-                    <img src="img/spacingfurniture-1.png" alt="Space Saving Furniture">
+                    <img src="img/new/k6.png" alt="Space Saving Furniture">
                     <p>Space Saving Furniture</p>
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-6 col-6 ">
-                    <img src="img/studytable-1.png" alt="Study Tables">
+                    <img src="img/new/k7.png" alt="Study Tables">
                     <p>Study Tables</p>
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-6 col-6 ">
-                    <img src="img/light-1.png" alt="Lighting">
+                    <img src="img/new/k8.png" alt="Lighting">
                     <p>Lighting</p>
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-6 col-6 ">
-                    <img src="img/wallpaint-1.png" alt="Wall Paint">
+                    <img src="img/new/k9.png" alt="Wall Paint">
                     <p>Wall Paint</p>
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-6 col-6 ">
-                    <img src="img/wallpaper-1.png" alt="Wallpapers">
+                    <img src="img/new/k10.png" alt="Wallpapers">
                     <p>Wallpapers</p>
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-6 col-6 ">
-                    <img src="img/bathroom.png" alt="Bathroom">
+                    <img src="img/new/k11.png" alt="Bathroom">
                     <p>Bathroom</p>
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-6 col-6 ">
-                    <img src="img/dressingtable-1.png" alt="Foyer Designs">
+                    <img src="img/new/k12.png" alt="Foyer Designs">
                     <p>Foyer Designs</p>
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-6 col-6 ">
-                    <img src="img/falscealing-1.png" alt="False Ceilings">
+                    <img src="img/new/k13.png" alt="False Ceilings">
                     
                     <p>False Ceilings</p>
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-6 col-6 ">
-                    <img src="img/spacingfurniture-1.png" alt="Movable Furniture">
+                    <img src="img/new/k14.png" alt="Movable Furniture">
                     <p>Movable Furniture</p>
                 </div>
             </div>
