--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                     
                     
                 </div>
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+                <div class="col-lg-6 wow fadeInRight" data-wow-delay="0.5s">
                     <h4 class="section-title">About Us</h4>
                     <h1 class="display-5 mb-4">A Creative Architecture Agency For Your Dream Home</h1>
                     <p style="color: #854132; font-weight: bold;">At Ochron Interiors, we believe that every space has
@@ -482,7 +482,7 @@
     <div class="container-xxl py-5 why">
         <div class="container">
             <div class="row g-5">
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="col-lg-6 wow fadeInLeft" data-wow-delay="0.1s">
                     <h4 class="section-title">Why Choose Us!</h4>
                     <h1 class="display-5 mb-4">Why You Should Trust Us? Learn More About Us!</h1>
                     <p class="mb-4">Our design process is very simple. We listen to you, understand what you need, and
