--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,7 @@
                 <h1 class="display-5 mb-4">If You Have Any Query, Please Feel Free Contact Us</h1>
             </div>
             <div class="row g-5">
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="col-lg-6 wow fadeInLeft" data-wow-delay="0.1s">
                     <div class="d-flex flex-column justify-content-between h-100">
                         <div class="bg-light d-flex align-items-center w-100 p-4 mb-4">
                             <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-dark" style="width: 55px; height: 55px;">
@@ -160,7 +160,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
+                <div class="col-lg-6 wow fadeInRight" data-wow-delay="0.5s">
                     <!-- <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p> -->
                     <form>
                         <div class="row g-3">
@@ -201,7 +201,7 @@
 
 
     <!-- Google Map Start -->
-    <div class="container-xxl pt-5 px-0 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-xxl pt-5 px-0 wow fadeInUp" data-wow-delay="0.1s">
         <iframe class="w-100 mb-n2" style="height: 450px;"
          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d487146.20770702!2d78.309017!3d17.467861!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb93469bca0527%3A0x1e513c12e5dc750a!2sOchron%20Interiors%20Private%20Limited!5e0!3m2!1sen!2sus!4v1715842809116!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
