--- a/index.html
+++ b/index.html
@@ -685,19 +685,19 @@
           Our Work Videos
         </h2>
         <div class="container">
-          <div class="video1 video">
+          <div class="video1 video wow fadeInLeft">
             <video controls="" muted="">
               <source src="/img/video1.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
           </div>
-          <div class="video2 video">
+          <div class="video2 video wow fadeInUp">
             <video controls="" muted="">
               <source src="/img/video2.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
           </div>
-          <div class="video2 video">
+          <div class="video2 video wow fadeInRight">
             <video controls="" muted="">
               <source src="/img/video3.mp4" type="video/mp4">
               Your browser does not support the video tag.
@@ -714,60 +714,60 @@
                 </span>
             </span>
             <div class="row">
-                <div class="col-lg-2 col-md-6 col-sm-6 col-6">
+                <div class="col-lg-2 col-md-6 col-sm-6 col-6 wow fadeInLeft">
                     <img src="img/new/k1.png" alt="Modular Kitchen">
                     <p>Modular Kitchen</p>
                 </div>
-                <div class="col-lg-2 col-md-6 col-sm-6 col-6 ">
+                <div class="col-lg-2 col-md-6 col-sm-6 col-6 wow fadeInLeft">
                     <img src="img/new/k2.png" alt="Storage & Wardrobes">
                     <p>Wardrobes</p>
                 </div>
-                <div class="col-lg-2 col-md-6 col-sm-6 col-6 ">
+                <div class="col-lg-2 col-md-6 col-sm-6 col-6 wow fadeInLeft">
                     <img src="img/new/k3.png" alt="Puja Unit">
                     <p>Puja Unit</p>
                 </div>
-                <div class="col-lg-2 col-md-6 col-sm-6 col-6 ">
+                <div class="col-lg-2 col-md-6 col-sm-6 col-6 wow fadeInRight">
                     <img src="img/new/k4.png" alt="Crockery Units">
                     <p>Crockery Units</p>
                 </div>
-                <div class="col-lg-2 col-md-6 col-sm-6 col-6 ">
+                <div class="col-lg-2 col-md-6 col-sm-6 col-6 wow fadeInRight">
                     <img src="img/new/k5.png" alt="TV Units">
                     <p>TV Units</p>
                 </div>
-                <div class="col-lg-2 col-md-6 col-sm-6 col-6 ">
+                <div class="col-lg-2 col-md-6 col-sm-6 col-6 wow fadeInRight">
                     <img src="img/new/k6.png" alt="Space Saving Furniture">
                     <p>Space Saving Furniture</p>
                 </div>
-                <div class="col-lg-2 col-md-6 col-sm-6 col-6 ">
+                <div class="col-lg-2 col-md-6 col-sm-6 col-6 wow fadeInLeft">
                     <img src="img/new/k7.png" alt="Study Tables">
                     <p>Study Tables</p>
                 </div>
-                <div class="col-lg-2 col-md-6 col-sm-6 col-6 ">
+                <div class="col-lg-2 col-md-6 col-sm-6 col-6 wow fadeInLeft">
                     <img src="img/new/k8.png" alt="Lighting">
                     <p>Lighting</p>
                 </div>
-                <div class="col-lg-2 col-md-6 col-sm-6 col-6 ">
+                <div class="col-lg-2 col-md-6 col-sm-6 col-6 wow fadeInLeft">
                     <img src="img/new/k9.png" alt="Wall Paint">
                     <p>Wall Paint</p>
                 </div>
-                <div class="col-lg-2 col-md-6 col-sm-6 col-6 ">
+                <div class="col-lg-2 col-md-6 col-sm-6 col-6 wow fadeInRight">
                     <img src="img/new/k10.png" alt="Wallpapers">
                     <p>Wallpapers</p>
                 </div>
-                <div class="col-lg-2 col-md-6 col-sm-6 col-6 ">
+                <div class="col-lg-2 col-md-6 col-sm-6 col-6 wow fadeInRight">
                     <img src="img/new/k11.png" alt="Bathroom">
                     <p>Bathroom</p>
                 </div>
-                <div class="col-lg-2 col-md-6 col-sm-6 col-6 ">
+                <div class="col-lg-2 col-md-6 col-sm-6 col-6 wow fadeInRight">
                     <img src="img/new/k12.png" alt="Foyer Designs">
                     <p>Foyer Designs</p>
                 </div>
-                <div class="col-lg-2 col-md-6 col-sm-6 col-6 ">
+                <div class="col-lg-2 col-md-6 col-sm-6 col-6 wow fadeInLeft">
                     <img src="img/new/k13.png" alt="False Ceilings">
                     
                     <p>False Ceilings</p>
                 </div>
-                <div class="col-lg-2 col-md-6 col-sm-6 col-6 ">
+                <div class="col-lg-2 col-md-6 col-sm-6 col-6 wow fadeInRight">
                     <img src="img/new/k14.png" alt="Movable Furniture">
                     <p>Movable Furniture</p>
                 </div>
@@ -839,7 +839,7 @@
             <div id="faq-wrapper">
                 <div class="accordion" id="faq">
                     <div class="faq is-active">
-                        <div class="question plus" id="faqhead1" style="background-color: #2078a4;">
+                        <div class="question plus wow fadeInLeft" id="faqhead1" style="background-color: #2078a4; ">
                             What services does Ochron Interiors provide?
                         </div>
                         <div id="faq1" class="answer collapse show" aria-labelledby="faqhead1" data-parent="#faq">
@@ -849,7 +849,7 @@
                         </div>
                     </div>
                     <div class="faq is-active">
-                        <div class="question plus" id="faqhead1" style="background-color: #2078a4;">
+                        <div class="question plus wow fadeInRight" id="faqhead1" style="background-color: #2078a4; ">
                             How much do Ochron Interiors services cost?
                         </div>
                         <div id="faq1" class="answer collapse show" aria-labelledby="faqhead1" data-parent="#faq">
@@ -860,7 +860,7 @@
                         </div>
                     </div>
                     <div class="faq is-active">
-                        <div class="question plus" id="faqhead1" style="background-color: #2078a4;">
+                        <div class="question plus wow fadeInLeft" id="faqhead1" style="background-color: #2078a4; ">
                             Can Ochron Interiors assist with the selection and sourcing of materials and finishes?
                         </div>
                         <div id="faq1" class="answer collapse show" aria-labelledby="faqhead1" data-parent="#faq">
@@ -871,7 +871,7 @@
                         </div>
                     </div>
                     <div class="faq is-active">
-                        <div class="question plus" id="faqhead1" style="background-color: #2078a4;">
+                        <div class="question plus wow fadeInRight" id="faqhead1" style="background-color: #2078a4; ">
                             How long does an interior design project typically take?
                         </div>
                         <div id="faq1" class="answer collapse show" aria-labelledby="faqhead1" data-parent="#faq">
