--- a/space-saving-furniture.html
+++ b/space-saving-furniture.html
@@ -82,22 +82,22 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link ">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                
-                <div class="nav-item dropdown active">
-                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Services</a>
+                <a href="/" class="nav-item nav-link"> <i class="fa fa-home"></i> Home</a>
+                <a href="about.html" class="nav-item nav-link"> <i class="fa fa-address-book"></i>About</a>
+
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown"> <i class="fa fa-server"></i>Services</a>
                     <div class="dropdown-menu border-0 m-0">
                         <a href="living-room.html" class="dropdown-item">Living Room</a>
                         <a href="bedroom.html" class="dropdown-item">Bedroom</a>
                         <a href="modular-kitchen.html" class="dropdown-item">Modular Kitchen</a>
-                        
+
                         <a href="wardrobe.html" class="dropdown-item">Wardrobe</a>
-                        <a href="space-saving-furniture.html" class="dropdown-item active">Space Saving Furniture</a>
+                        <a href="space-saving-furniture.html" class="dropdown-item  active">Space Saving Furniture</a>
                     </div>
                 </div>
-                <a href="design-gallery.html" class="nav-item nav-link">Design Gallery</a>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                <a href="design-gallery.html" class="nav-item nav-link"> <i class="fa fa-photo-video"></i>Design Gallery</a>
+                <a href="contact.html" class="nav-item nav-link"> <i class="fa fa-phone-alt"></i>Contact</a>
             </div>
             <a href="appointment.html" class="btn btn-primary py-2 px-4 d-none d-lg-block">Appointment</a>
         </div>
