--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
 
     
     <!-- Carousel Start -->
-    <div class="container-fluid p-0  wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid p-0  wow fadeIn hero" data-wow-delay="0.1s">
         <div class="owl-carousel header-carousel position-relative">
-            <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-1.jpg'>">
+            <div class="owl-carousel-item position-relative" data-dot="<img src='img/new/A8.jpg'>">
                 <img class="img-fluid" src="img/new/A8.jpg" alt="">
                 <div class="owl-carousel-inner">
                     <div class="container">
@@ -134,7 +134,7 @@
                     </div>
                 </div>
             </div>
-            <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-2.jpg'>">
+            <div class="owl-carousel-item position-relative" data-dot="<img src='img/new/A3.jpg'>">
                 <img class="img-fluid" src="img/new/A3.jpg" alt="">
                 <div class="owl-carousel-inner">
                     <div class="container">
@@ -150,7 +150,7 @@
                     </div>
                 </div>
             </div>
-            <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-3.jpg'>">
+            <div class="owl-carousel-item position-relative" data-dot="<img src='img/new/A25.jpg'>">
                 <img class="img-fluid" src="img/new/A25.jpg" alt="">
                 <div class="owl-carousel-inner">
                     <div class="container">
@@ -168,7 +168,7 @@
                     </div>
                 </div>
             </div>
-            <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-3.jpg'>">
+            <div class="owl-carousel-item position-relative" data-dot="<img src='img/new/A34.jpg'>">
                 <img class="img-fluid" src="img/new/A34.jpg" alt="">
                 <div class="owl-carousel-inner">
                     <div class="container">
@@ -190,8 +190,18 @@
     </div>
     <!-- Carousel End -->
 
-
-
+<style>
+ 
+.hero .owl-carousel-item{
+    height: 100vh;
+}
+.hero .owl-carousel-item img{
+    height: 100%;
+}
+</style>
+<script>
+   
+</script>
 
     <!-- About Start -->
     <div style="background-color:#f2df56;">
